Fixed most reported issues

--- a/band_02/asche_im_wind/asche-im-wind.tex
+++ b/band_02/asche_im_wind/asche-im-wind.tex
@@ -107,7 +107,7 @@ Dabei habt ihr gute Kontakten mit diesen geknüpft.
 Leider haben einige der \enquote{aufrechten} Verteidiger von damals davon erfahren und wollen Rache nehmen, weswegen es günstig wäre zu verschwinden.
 In den Kneipen hört ihr Gerüchte über eine hohe Belohnung von der Torf-Compagnie für die Ergreifung von \dots wandernden Wildschweinfässern?
 
-Interessant für andere Gruppen: Einerseits könnte man mit etwas
+\textbf{Interessant für andere Gruppen}: Einerseits könnte man mit etwas
 Geld in den Süden gehen und sich etwas Neues aufbauen,
 andererseits könnte ein eventuell damit verbundenes Kopfgeld
 abbezahlt werden, da der Bekannte eines Bekannten von den
@@ -118,8 +118,9 @@ großen und breiten Kriegerrücken verstecken zu können.
 \spaltenende
 
 \subsection*{Wer weiß wovon?}
-\tabelle{lXXXXX}{
-& Ascheregen, verletzte Tiere & Stoerrebrandt-Lieferung & Brief an den Großmeister & Hexen im Rorwhed & Wildschwein\-fässer \\
+\newcolumntype{Y}{>{\centering\arraybackslash}X}
+\tabelle{lYYYYY}{
+& Ascheregen, verletzte Tiere & Stoerrebrandt-Lieferung & Brief an den Großmeister & Hexen im \mbox{Rorwhed} & Wildschwein\-fässer \\
 Streuner &   & x &   &   & x \\
 Hexe     & x &   &   & x &   \\
 Druide   & x &   &   & x &   \\
@@ -154,7 +155,7 @@ Das Kontor ist kein Ort der Ruhe:
 
 
 \subsection[Im Ordenshaus der Grauen Stäbe]{Im Ordenshaus der Grauen Stäbe (Bunte Flucht)}
-Im Ordenshaus herrscht unruhiges Geflüster: \textbf{Magistra major Vistella Jolen} ist vor einer Woche mit bleichem Gesicht und seltsamen Neuigkeiten von einer Reise nach \textbf{Tjolmar} zurückgekehrt. So habe südlich des \textbf{Rorwhed}s ein seltsamer Ascheregen in der Luft gehangen, der sich, nach einer \biglittlecap{Oculus Astralis}-Analyse als magisch herausgestellt hat \ilaris{80}.
+Im Ordenshaus herrscht unruhiges Geflüster: \textbf{Magistra major Vistella Jolen} ist vor einer Woche mit bleichem Gesicht und seltsamen Neuigkeiten von einer Reise nach \textbf{Tjolmar} zurückgekehrt. So habe südlich des \textbf{Rorwhed}s ein seltsamer Ascheregen in der Luft gehangen, der sich, nach einer \biglittlecap{Oculus Astralis}-Analyse als magisch herausgestellt hat (\ilaris{80}).
 Das wirre Muster der Kraftfäden habe sie an den Rand der Erschöpfung getrieben, doch mit Mühe konnte sie eine Sache erkennen:
 Es handelt sich um die Spur eines feenartigen Wesens, dessen urtümliche Magie von inneren Bränden verzehrt wird.
 
@@ -256,7 +257,7 @@ Dies können sie als Ausgangspunkt nehmen, um nach dem Abschluss der Stoerrebran
 Der Qualmgeist richtet unterdessen weitere Schäden an.
 
 Tatsächlich handelt es sich bei den Erscheinung um Nebenwirkungen des zerrissenen Feenpfades.
-Ausgehend von der \textbf{Silberkrone} können folgende Erscheinungen passieren (würfle mit einem W6):
+Im Umkreis der \textbf{Silberkrone} können folgende Erscheinungen passieren (würfle mit einem W6):
 \begin{enumerate}
 \item Mit einem trockenen Knacken beginnt die Rinde von einem fahlen
 Baum abzuplatzen. Darunter kommt aber kein Holz zum Vorschein,
@@ -287,9 +288,8 @@ gallopieren zwei Weinfässer mit metallenen Schweineköpfen und
 -füßen über den Weg. Vielleicht halten sie kurz inne. Sie
 wirken relativ orientierungslos.
 \end{enumerate}
-\begin{center}
-\zeichnung[0.6\columnwidth]{reh.jpg}
-\end{center}
+
+\vspace{4cm}
 
 \absatz{Die Weinlegende}
 Auf der Reise bietet sich an, in einer prall gefüllten Taverne den alten \textbf{Strupp} die Legende von Jokmanns Wein erzählen zu lassen (Quelle~2 auf S.\,\pageref{aiw_quelle2} im Anhang).
@@ -382,9 +382,9 @@ Die aufbrausende Katzenhexe \textbf{Xerinn} kämpft allerdings weiterhin mit der
 Denn statt den Widerstand gegen die Orks weiterzuführen, muss sie nun sehen, wie sie Auflösung ihres eigenen Zirkels verhindert.
 
 \begin{center}
-\includegraphics[width=0.925\linewidth]{offene_lizenz/hexe}
+\includegraphics[width=0.91\linewidth]{offene_lizenz/hexe_distressed}
 \end{center}
-
+\columnbreak
 Der Eulenhexer \textbf{Bringimox} sorgt sich dagegen mehr um das Loch in den Feenpfaden.
 Als die beiden Anführer die Umgebung des Berges untersucht haben, haben sie den glühenden Dryadenbaum gefunden und konnten sich angesichts der Berichte über die brennenden Höfe und den Qualmgeist zusammenreimen, wie diese beiden Dinge zusammenhängen.
 Sie sehen die Lösung in der Heilung des Baumes, wozu sie aber ausgewählte Leute aus beiden Zirkeln mit in das Tal der Dryade bringen müssen, die mit ihnen zusammen die Kraftfäden der Feenpfade wieder zusammenflicken und den magischen Brand in den Wurzeln des Baumes löschen.
@@ -420,10 +420,9 @@ Ihre Qualmgestalt erscheint etwa zum Licht der ersten Sterne und dann hat sie ke
 Bis dahin können die Helden versuchen, den Hexen bei den Vorbereitungen zu helfen.
 
 
-Wenn die Nacht hereinbricht, beginnt \textbf{Venaya} immer stärker zu qualmen.
+Sobald die Nacht hereinbricht, beginnt \textbf{Venaya} immer stärker zu qualmen.
 Wie in vielen Nächten zuvor beginnt kurz danach eine Besessenheit, denn für die Geister ist sie in diesem Zustand ein offenstehendes Tor.
 Wenn das geschieht, erhebt sie sich meist mit einem \biglittlecap{Leib des Windes} (\ilaris{147}\emph{f.}) in die Lüfte und lässt sich vom Wind weit ins Land tragen, um wahllos Gehöfte oder Reisende anzugreifen.
-
 
 In Verteidigung gegen den Qualmgeist können die Helden auf einen schnellen Sieg im Kampf setzen.
 Wenn sie besiegt wird, zerfällt sie zu Asche, unter welcher sie als Sprössling bis zum Morgengrauen neu heranwächst.
@@ -431,28 +430,28 @@ Wenn sie besiegt wird, zerfällt sie zu Asche, unter welcher sie als Sprössling
 Oder sie können Magie einsetzen, um sie sich und den Hexen vom Leib zu halten:
 \textit{Einfluss}zauber (\ilaris{133}) könnten sie auf Abstand halten, mit einem \biglittlecap{Harmoniesegen} (\ilaris{177}) wäre sie für eine Weile besänftigt, ein \biglittlecap{Geisterbann} (\ilaris{166}) könnte sie wieder in ihr natürliches Wesen zurückfinden lassen -- kreative Einfälle sollten belohnt werden.
 
-Das Ritual der Hexen dauert etwa zwei Stunden. Sobald dieses abgeschlossen wurde, hebt sich ein Windhauch durchs Tal, schüttelt kräftig die Baumkronen durch und die wilden Magieströme finden zu einer Ordnung zurück.
-Die Verbindung der \textbf{Dryade} zu \textbf{Tairach}s Geisterwelt reißt ab und die Wunden im Tal können heilen.
-
-\kreatur{Qualmgeist}{Ein Qualmgeist}{elementar}{
+\kreatur{Qualmgeist}{Ein Qualmgeist}{mythen}{
 	\label{geist}
     \kreaturkampfwerte{8}{6}{5}{4}
     \trennlinie
     \kreaturvorteile{
-        Aura (Hitze, Zähigkeit (20) alle 4 Initiativephasen, 1 Wunde), Immunität (Feuer), Verwundbarkeit I (Wasser), Flammenkörper (Alle Waffen, die Holz beinhalten, gelten gegen den Qualmgeist als Zerbrechlich (S. 47).}
+        Aura (Hitze, Zähigkeit (20) alle 4 Initiativephasen, 1 Wunde), Flammenkörper (Alle Waffen, die Holz beinhalten, gelten gegen den Qualmgeist als Zerbrechlich (S. 47), Immunität (Feuer), Schmerzimmun I, Verwundbarkeit I (Wasser)}
     \trennlinie
     \kreaturwaffe{Feuerpranken}{1}{10}{16}{2W6+2}{Nachbrennen}
     \kreaturkampfvorteile{Zusätzliche Attacke I}
     \trennlinie
     \kreaturinfo{AsP}{64}
-    \kreaturinfo{Feuer}{12 (Brenne, Caldofrigo, Leib des Feuers, Wand aus Flammen, Warmes Blut, Zorn der Elemente)}
-    \kreaturinfo{Luft}{10 (Aerofugo, Leib des Windes, Nebelwand, Tlalucs Odem (Qualm statt Gestank), Zorn der Elemente)}
+    \kreaturinfo{Feuer}{12 (Brenne toter Stoff!, Caldofrigo heiß und Kalt, Leib des Feuers, Wand aus Flammen, Warmes Blut, Zorn der Elemente)}
+    \kreaturinfo{Luft}{10 (Aerofugo, Leib des Windes, Nebelwand und Morgendunst, Tlalucs Odem (Qualm statt Gestank))}
     \kreaturinfo{Eigenschaften}{8 (Atemnot)}
     \trennlinie
     \kreaturinfo{Beschreibung und Verhalten}{In ihrer nächtlichen Form ist die Dryade stark vom Vulkanismus gezeichnet, dessen Glut an den Wurzeln ihres Baumes nagt. Ihre feingliedrige Gestalt verkohlt und wird umhüllt von einer dichten Qualmwolke, die die Nacht noch mehr verdunkelt und auf Mensch und Tiere hustenreizend und erstickend wirken kann. Sie hat keinen Zugriff mehr auf das Element Humus, sondern wirkt Zauber aus den Bereichen Feuer und Luft, um Unbelebtes in Brand zu setzen und Lebewesen zu ersticken.}
 }
 
-\neuespalte
+Zum Kampfbeginn zaubert der Qualmgeist einen Nebelwand und Morgendunst (\ilaris{148}) in der Variation Geisternebel. Der Nebel hat durch den Schwelbrand ein rotes Glühen. Im Nebel tauchen als Verstärkung drei untote Wildschweine (\ilaris{108}) auf (sie zählen also nicht zur Kreaturenklasse "Tier" sondern zu "Untoter", \ilaris{99}). Sie sind aggressiv und greifen alles an, was sie als Eindringling sehen; also nicht die Dryade.
+
+Das Ritual der Hexen dauert etwa zwei Stunden. Sobald dieses abgeschlossen wurde, hebt sich ein Windhauch durchs Tal, schüttelt kräftig die Baumkronen durch und die wilden Magieströme finden zu einer Ordnung zurück.
+Die Verbindung der \textbf{Dryade} zu \textbf{Tairach}s Geisterwelt reißt ab und die Wunden im Tal können heilen.
 
 \abschnitt{Der Mühen Lohn}
 
@@ -496,7 +495,7 @@ Erst abseits der Straßen im Wald findet man \textbf{Wildschweine}, \textbf{Stre
 \spaltenende
 \vfill
 \begin{center}
-\includegraphics[width=\linewidth]{offene_lizenz/svelt.png}
+\includegraphics[width=\linewidth]{offene_lizenz/svelt_distressed.png}
 \end{center}
 
 
