--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -112,8 +112,8 @@ Auf der linken Seite kann ein hölzerner Kran Lasten zu einem höher gelegenen u
 Die Last wird eingehakt und dann mithilfe einer unten angebrachten Kurbel und einem über eine Rolle laufenden Seil hochgezogen.
 Ab und an dringt für Sekundenbruchteile orangefarben flackerndes Licht von der Schmiede in die Mine.
 
-Immer dann, wenn jemand ein Wagnis unternimmt, kannst du eine Probe verlangen:
-\info{Die betreffende Person würfelt dazu drei zwanzigseitige Würfel (3W20), von denen nur das mittlere Ergebnis gewertet wird, und addiert ihren Probenwert (PW) von Heimlichkeit. Das Ergebnis muss den Zielwert von 12 erreichen, damit die Aktion glückt.}
+\info{Immer dann, wenn jemand ein Wagnis unternimmt, kannst du eine Probe verlangen:\\
+Die betreffende Person würfelt dazu drei zwanzigseitige Würfel (3W20), von denen nur das mittlere Ergebnis gewertet wird, und addiert ihren Probenwert (PW) von Heimlichkeit. Das Ergebnis muss den Zielwert von 12 erreichen, damit die Aktion glückt.}
 \mprobe{heimlichkeit}{Untertauchen (12)}{Heimlichkeit}{Um am Minentrupp vorbei zum Kran zu schleichen.}
 \abschnitt{Schmiede}
 \info{
@@ -209,7 +209,7 @@ Was, immer noch nicht?! Na warte, bis ich mit dir fertig bin \dots“
 }
 Durch den Türspalt kann man drei bis fünf mit Arbach-Säbeln bewaffnete Ork-Krieger (\ilaris{104}) beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
 
-\zeichnung[0.3\textwidth]{Goblin.png}
+\zeichnung[0.3\textwidth]{Goblin-Tusche_f2_2}
 
 \columnbreak
 
