--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -3,6 +3,8 @@
 \usepackage{verbatim}
 \usepackage{fourier}
 \usepackage{geometry}
+
+
 %\input{kreaturen.tex}
 
 \setlist{nolistsep, align=parleft,left=5pt..1.5em}
@@ -107,7 +109,7 @@
 {\Large
 \vspace*{0.5cm}
 \begin{center}
-\textbf{Version 0.9 vom \today}
+\textbf{Version 0.95 vom \today}
 \end{center}
 \vspace*{0.25cm}
 \begin{center}
@@ -137,9 +139,10 @@
 	Matthias Thanos\\
 	% Norman Obst\\
 	% René Dudziak\\
+	\href{https://www.instagram.com/rvb.illustration/}{Ramona von Brasch}\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\
-	\href{https://www.nga.gov/}{National Gallary of Art}\\
 	\href{https://www.flickr.com/photos/britishlibrary/albums/with/72157640537276514}{British Library}\\
+	\href{https://www.nga.gov/}{National Gallary of Art}
 }	
 \credit{\LaTeX-Klasse}{
 	\href{https://github.com/ilaris-tools/IlarisTex}{Lukas Ruhe}
@@ -159,7 +162,7 @@
 }
 
 \credit{Organisation und Redaktion}{
-	\href{https://github.com/XaverStiensmeier}{Xaver Stiensmeier}
+	Xaver Stiensmeier
 }}
 \lizenz
 \inhaltsverzeichnis
@@ -170,7 +173,7 @@
 \input{vorwort}
 
 \subsection*{Hinweise zur Orientierung}
-Das Ilaris-Regelbuch wird im folgenden mit \emph{Ilaris} und der entsprechende Seitenzahl referenziert.
+Das Ilaris-Regelbuch wird im folgenden mit \emph{Ilaris} und der entsprechenden Seitenzahl referenziert.
 
 \vorlesen{Texte zum Vorlesen oder Nacherzählen sind generell durch diesen Kasten hervorgehoben.}
 
@@ -183,11 +186,11 @@ Das Ilaris-Regelbuch wird im folgenden mit \emph{Ilaris} und der entsprechende S
 
 \vfill
 
-\includegraphics[width=\linewidth]{offene_lizenz/rome_20_3}
+\zeichnung[\linewidth]{offene_lizenz/rome_20_4}
 
 \columnbreak
 
-Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Im Sinne der Übersichtlichkeit werden verschiedene Symbole benutzt, um die Probe zu beschreiben: Ist \textit{Zusammenarbeit} (\ilaris{8}) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (\ilaris{8}), wo der beste Charakter \texticon{probe_gruppenprobe_gut}, oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht}, oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (\ilaris{9}) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (\ilaris{9}). Ein Beispiel:
+Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Im Sinne der Übersichtlichkeit werden verschiedene Symbole benutzt, um die Probe zu beschreiben: Ist \textit{Zusammenarbeit} (\ilaris{8}) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (\ilaris{8}), wo der beste Charakter \texticon{probe_gruppenprobe_gut} (Pfeil oben), oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht} (Pfeil unten), oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (\ilaris{9}) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (\ilaris{9}). Ein Beispiel:
 
 \probenkasten[
 bild=beeinflussung,
