--- a/band_02/spielhilfen/encounter.tex
+++ b/band_02/spielhilfen/encounter.tex
@@ -48,7 +48,7 @@ Im besten Fall erzählt ein Kampf durch solche Entscheidungen eine eigene kleine
 \unterabsatz{Bodenplan}
 Ich empfehle für alle Kämpfe mit mehr als zwei Beteiligten, einen Bodenplan zu nutzen.
 Das kann auch eine schnelle Skizze sein.
-Denn wenn: \enquote{Wo laufe ich hin und auf wen haue ich drauf?} eine interessante Entscheidung sein soll, wird sonst meist viel Spielzeit verbrannt für Nachfragen der Art: \enquote{Wie weit ist der weg? ... 17 Schritt? Mist, ok, dann verlängere ich einmal Reichweite ... Warte, dann schaffe ich keine Mächtige Magie, das lohnt sich dann nicht. Dann mache ich, äh, ...}.
+Denn wenn \enquote{Wo laufe ich hin und auf wen haue ich drauf?} eine interessante Entscheidung sein soll, wird sonst meist viel Spielzeit verbrannt für Nachfragen der Art: \enquote{Wie weit ist der weg? ... 17 Schritt? Mist, ok, dann verlängere ich einmal Reichweite ... Warte, dann schaffe ich keine Mächtige Magie, das lohnt sich dann nicht. Dann mache ich, äh, ...}.
 Hat man dagegen einen genauen Bodenplan, kann der betroffene Spieler sich schon während die anderen dran sind überlegen, ob er seinen Ignifaxius mit erhöhter Reichweite sprechen möchte, näher ran läuft, einen Feuerelementar beschwört oder sich einfach versteckt. Eine grobe Skizze leistet dies zwar nicht ganz, klärt aber zumindest ungefähr, wer wo steht und ist oft ein guter Kompromiss.
 
 \vfill
@@ -58,7 +58,7 @@ Hat man dagegen einen genauen Bodenplan, kann der betroffene Spieler sich schon 
 \neueseite
 
 \absatz{Rollen im Kampf}
-Oft ist es schwierig für die SL, neben der korrrekten regeltechnischen Umsetzung des Kampfes auch noch für alle Gegner interessante und glaubwürdige Handlungen zu improvisieren.
+Oft ist es schwierig für die Spielleitung, neben der korrrekten regeltechnischen Umsetzung des Kampfes auch noch für alle Gegner interessante und glaubwürdige Handlungen zu improvisieren.
 Als Hilfestellung kann er die Gegner in Rollen einteilen, wie zum Beispiel \textit{Anführer}, \textit{Frontsau} oder \textit{Artillerie}.
 Sie geben dem Spielleiter eine Idee, wie der entsprechende Gegner sich im Kampf verhalten wird.
 Ein Gegner kann dabei mehrere Rollen gleichzeitig ausfüllen. So könnte der \textit{Anführer} zugleich Armbrustschütze sein (\textit{Artillerie})
@@ -74,7 +74,7 @@ Einen Kampf mit verschiedenen Rollen zu spicken, erzeugt nahezu automatisch inte
 Zu Bedenken ist allerdings auch, ob eine kunterbunte Gegnertruppe auch noch Sinn in der Spielweltlogik macht.
 Die Kampfbegegnung mit einer abgerissenen Räuberbande zum Beispiel wird sicherlich spannender, wenn die Gegner in erhöhter Position einen Feuerball-formenden Magier haben.
 Aber warum sollte der sich mit solchem Pack abgeben?
-In solchen Fällen musst du abwägen, ob deinen Spielern eine konsistente Spielwelt, oder eine spannende(re) Kampfbegegnung wichtiger ist. 
+In solchen Fällen musst du abwägen, ob deinen Spielern eine konsistente Spielwelt oder eine spannende(re) Kampfbegegnung wichtiger ist. 
 Im besten Fall findest du eine passende Alternative oder eine Erklärung.
 Vielleicht arbeitet sich statt dem Magier einer der Räuber an einem Felsbrocken ab, der wohl direkt zu Beginn des Hinterhaltes auf die SCs stürzen sollte, sich aber aktuell noch sträubt.
 Oder vielleicht sind die Räuber doch nicht so abgerissen, sondern gehören zu einer Gruppe Deserteure der Dritten Dämonenschlacht, inklusive Kampfmagier.
@@ -217,7 +217,7 @@ Der Kampf sollte sowohl taktisch als auch erzählerisch genug bieten um seine ou
 Es kann schwierig sein, einzelne Gegner zu designen, die nicht pro Runde einen SC töten, aber trotzdem eine Chance haben, den Kampf zu gewinnen. Das erklärt sich etwa so: Ilaris-Kämpfe sind darauf ausgelegt ca. 2--4 Runden zu dauern. Wenn dein Endgegner gegen 5 SCs gewinnen können soll, muss er im Schnitt also 1,25 pro Runde ausschalten.
 
  Darüber hinaus ist ein einzelner Gegner etwas langweilig, weil die Entscheidung \enquote{auf wen haue ich drauf?} nicht vorhanden ist.
- Daher ist es meist eine gute Idee, Endgegnern einige Minion zur Seite zu stellen.
+ Daher ist es meist eine gute Idee, Endgegnern einige Minions zur Seite zu stellen.
  Ausnahmen bestätigen wie immer die Regel. 
 
 Die Frage danach, wie viele Gegner es sein dürfen, stellt sich aber auch generell.
@@ -261,9 +261,9 @@ Viele Spieler brauchen allerdings einen Stoß in die richtige Richtung.
 \unterabsatz{Terrain}
 Allzu große Battlemaps sind unpraktisch in der Handhabung.
 Auch sind große Wiesenflächen oder ähnliches nicht unbedingt besonders spannend.
-Daher ist es eine Art Kunst geworden auf einer 20x20 bis 30x30 Felder große Karte ein möglichst abwechslungsreiches Schlachtfeld unterzubringen. Dabei kannst du Hindernisse (Terrain, Wände, ...) verschiedener Art einsetzen um dem Kampf taktische Tiefe zu geben. 
+Daher ist es eine Art Kunst geworden auf einer 20x20 bis 30x30 Felder großen Karte ein möglichst abwechslungsreiches Schlachtfeld unterzubringen. Dabei kannst du Hindernisse (Terrain, Wände, ...) verschiedener Art einsetzen um dem Kampf taktische Tiefe zu geben. 
 
-Um ein Hafenbecken herum ist die Lauf-Distanz zum Beispiel eine andere, als die Bogenschuss-Distanz.
+Um ein Hafenbecken herum ist die Lauf-Distanz zum Beispiel eine andere als die Bogenschuss-Distanz.
 Soll ein feindlicher Magier am Bergpass nicht trivial zu erreichen sein, kannst du ihn weit oben am Hang positionieren, oder aber einfach auf einen Felsen setzen, den man erklettern muss.
 Im besten Fall überlegst du dir vorab, wie und ob deine Hindernisse überwindbar sind und ob sie auch die Sicht- und Schusslinie versperren.
 Unüberwindbar wäre zum Beispiel eine Höhlenwand. Ein Seidenvorhang dagegen blockiert nur die Sicht, ein Wasserbecken kann man durchschwimmen oder überfliegen, ein Geröllfeld halbiert die Bewegungsreichweite, eine Tür kann man einschlagen.
@@ -317,7 +317,7 @@ Vermeiden sollte man dagegen irrelevante Unterschiede, also zum Beispiel 5 Söld
 \bigskip
 
 Speziell zu \textbf{Magiern} oder ähnlichen Gegnern:
-Es kann sehr hilfreich sein, wenn du deren Zauberauswahl (für diesen Kampf) auf 1--3 beschränkst und die Regeln bereit hältst, zum Beispiel als Manöverkarten.
+Es kann sehr hilfreich sein, wenn du deren Zauberauswahl (für diesen Kampf) auf 1--3 beschränkst und deren Regeln bereit hältst, zum Beispiel als Manöverkarten.
 Klar, wahrscheinlich kann der NSC mehr, aber du als Spielleiter möchtest vermutlich nicht neben allem anderen auch noch den optimalen Zauber aus einer längeren Liste wählen, zudem auch noch in passender Modifikation.
 Stattdessen setzen wir: Der Borbaradianer macht den \biglittlecap{Höllenpein} mit 1\,x\,\textit{Vorbereitung verkürzen} gegen einzelne Ziele, \biglittlecap{Tlalucs Odem} mit 2\,x\,\textit{Vorbereitung verkürzen}  als Flächenschaden oder er beschwört einen Dämon, wenn er glaubt, die Aktion Konzentration für die Beherrschung aufbringen zu können.
 Das ist bereits einiges zum Durchlesen bei der Vorbereitung und wird uns reichen, wenn wir nebenher noch seine zwei Handlanger und die Hauschimäre spielen müssen. 
