--- a/band_02/vorwort.tex
+++ b/band_02/vorwort.tex
@@ -38,7 +38,7 @@ Ein besonderer Dank gilt auch den Künstlern Bernhard Eisner, Alnus (Anton Dobsa
 Und natürlich gebührt ein riesiges Dankeschön dem Ilaris-Team, ohne das dieses Regelwerk nie das Licht der Welt erblickt hätte:
 \textbf{Lukas \enquote{Curthan} Schafzahl, Lennart Sobirey, René Dudziak} und \textbf{Julius Natrup}.
 
-Wo ich im Vorfeld viel organisatorische Arbeit hatte, kann ich mich nun, da ich diese Zeilen schreibe ziemlich zurücklehnen. Dank \textbf{Lukas Ruhe} und \textbf{Matthias Ott}, der bereits den ersten Wettbewerb organisiert und die \enquote{Chroniken von Ilaris -- Band I} herausgegeben hat, verläuft der Satz auch diesmal größtenteils reibungslos. Gemeinsam haben wir es geschafft, den Wettbewerb auf ein neues Niveau anzuheben.
+Wo ich im Vorfeld viel organisatorische Arbeit hatte, konnte ich im Satz auf bewährte Hilfe zählen. Danke an \textbf{Lukas Ruhe} und \textbf{Matthias Ott}, der bereits den ersten Wettbewerb organisiert und die \enquote{Chroniken von Ilaris -- Band I} herausgegeben hat. Gemeinsam haben wir es geschafft, den Wettbewerb auf ein neues Niveau anzuheben.
 
 Ich freue mich schon jetzt auf den nächsten Wettbewerb und bin gespannt, welche kreativen Abenteuer uns dann erwarten.
 
