--- a/band_02/asche_im_wind/asche-im-wind.tex
+++ b/band_02/asche_im_wind/asche-im-wind.tex
@@ -5,11 +5,11 @@
 
 Die Eruption der \textbf{Silberkrone} hat Ende 1039 BF den Vulkanismus im \textbf{Rorwhed} wieder geweckt.
 Ausgelöst wurde sie durch ein Ritual des Tairach-Priesters Gushrogh Drughai.
-Die örtliche Hexenzirkel verlor als Folge seinen Tanzplatz, doch auch die Bewohner der Umgebung sind seitdem von den Auswirkungen betroffen.
+Der örtliche Hexenzirkel verlor als Folge seinen Tanzplatz, doch auch die Bewohner der Umgebung sind seitdem von den Auswirkungen betroffen.
 Die Eruption beschädigte auch das magische Geflecht, welches an diesem Ort besonders intensiv auftritt:
 Kraftlinien und Feenpfade sind in Unordnung oder zerrissen und ihre Kraft fließt ins Diesseits.
 Über die Feenpfade tauchen manche merkwürdigen Kreaturen auf und sorgen für Unruhe in der Umgebung.
-Man hat den benachbarten \textbf{Zirkel des Grauen Waldes} zur Hilfe gerufen, um den Schaden zu untersuchen.
+Die örtlichen Hexen riefen den benachbarten \textbf{Zirkel des Grauen Waldes} zur Hilfe, um den Schaden zu untersuchen.
 
 Besonders hart getroffen hat es die örtliche Dryade \textbf{Venaya}:
 Sie wacht seit Jahren über ein Tal im Schatten des Gipfels.
@@ -151,11 +151,11 @@ Das Kontor ist kein Ort der Ruhe:
 	um seiner Herrin \textbf{Vanjescha Stoerrebrandt} im Tjolmarer Kontor die benötigten Utensilien und Finanzen für ihr großes Herzensprojekt liefert:
 	Der Ausbau der Handelsstraße von \textbf{Tjolmar} nach \textbf{Riva}.
 	Er hat bereits zwei Haudegen angeworben, allerdings würde er sich angesichts des Wertes seiner Ladung über weitere Söldner freuen, die ihn zumindest einen Teil des Weges begleiten. 
-	er Tageslohn dafür beträgt 4~Silber. Zunächst gilt es aber, die letzten Versicherungen abzuzeichnen, sollte es zu spontanen Tributforderungen oder Zollsperren durch orkische Truppen kommen.
+	Der Tageslohn dafür beträgt 4~Silber. Zunächst gilt es aber, die letzten Versicherungen abzuzeichnen, sollte es zu spontanen Tributforderungen oder Zollsperren durch orkische Truppen kommen.
 
 
 \subsection[Im Ordenshaus der Grauen Stäbe]{Im Ordenshaus der Grauen Stäbe (Bunte Flucht)}
-Im Ordenshaus herrscht unruhiges Geflüster: \textbf{Magistra major Vistella Jolen} ist vor einer Woche mit bleichem Gesicht und seltsamen Neuigkeiten von einer Reise nach \textbf{Tjolmar} zurückgekehrt. So habe südlich des \textbf{Rorwhed}s ein seltsamer Ascheregen in der Luft gehangen, der sich, nach einer \biglittlecap{Oculus Astralis}-Analyse als magisch herausgestellt hat (\ilaris{80}).
+Im Ordenshaus herrscht unruhiges Geflüster: \textbf{Magistra major Vistella Jolen} ist vor einer Woche mit bleichem Gesicht und seltsamen Neuigkeiten von einer Reise nach \textbf{Tjolmar} zurückgekehrt. So habe südlich des \textbf{Rorwhed}s ein seltsamer Ascheregen in der Luft gehangen, der sich nach einer \biglittlecap{Oculus Astralis}-Analyse als magisch herausgestellt hat (\ilaris{80}).
 Das wirre Muster der Kraftfäden habe sie an den Rand der Erschöpfung getrieben, doch mit Mühe konnte sie eine Sache erkennen:
 Es handelt sich um die Spur eines feenartigen Wesens, dessen urtümliche Magie von inneren Bränden verzehrt wird.
 
@@ -359,7 +359,7 @@ Diese sind aber nicht auf die Belohnung der Torf-Compagnie aus, sondern sehen in
 \includegraphics[width=\linewidth]{offene_lizenz/sailor_sepia}
 
 Sollte die Gruppe sich nach dem Ascheregen oder ähnlich komplexen Themen erkundigen, werden sie an die Schamanin \textbf{Aschka} weitergeleitet.
-Bezüglich des Qualmgeistes wird sie den Helden erklären, dass sie in ihrer Meditation ein Feuer in der Erde verspürt hat, dass, als sie es näher betrachten wollte, ebenfalls angefangen hat, an ihrem Astralleib zu zehren.
+Bezüglich des Qualmgeistes wird sie den Helden erklären, dass sie in ihrer Meditation ein Feuer in der Erde verspürt hat, das, als sie es näher betrachten wollte, ebenfalls angefangen hat, an ihrem Astralleib zu zehren.
 Sie vermutet, dass die Hexen mehr wissen, zumindest wirkten diese bei Begegnungen zuletzt äußerst unstet.
 
 \probe{beeinflussung}{Überreden (16)}{
@@ -464,7 +464,7 @@ Sie veranstalten außerdem eine schnelle Kollekte, bei welcher 20~Silber als Bel
 \end{center}
 
 Hexer \textbf{Bringimox} drückt einem der Helden noch etwas in die Hand:
-Ein Vogelknochen, auf welchem ein Zauber liegt. Zerbricht man ihn, löst das einmalig einen \biglittlecap{Krähenruf} aus \ilaris{134}.
+Ein Vogelknochen, auf welchem ein Zauber liegt. Zerbricht man ihn, löst das einmalig einen \biglittlecap{Krähenruf} aus (\ilaris{134}).
 Die \textbf{Dryade} kann zudem anbieten, von der Gruppe gesammelte Kräuter zu verzaubern, sodass sie lange frisch bleiben.
 
 \neueseite
