--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -888,26 +888,25 @@ Nach dem Kampf kann die Gruppe das Szepter bergen. Es besteht hauptsächlich aus
 Ein großer \textbf{Serpentin} ist an zentraler Stelle eingebettet.
 \\
 Auch einige Waffen und Werkzeuge finden sich in den amorphen Überresten der Amöbe. Diese sind natürlich von hervorragender Qualität (3xHQ und mehr, \emph{gutes Werkzeug} (\ilaris{61})), waren hier aber eigentlich zur ewigen Ruhe gebettet. Etwas mitzunehmen könnten Angrosch und auch Boron als Frevel auffassen \dots
-\vspace{1cm}
-\begin{center}
-\includegraphics[width=0.45\linewidth]{Lindwurmschlägl}
-\end{center}
 
-\columnbreak
 \subsubsection{Immer diese Schrate!}
 \begin{center}
 	\zeichnung[0.8\linewidth]{Wuehlschrat_distressed.png}
 \end{center}
 Beim Austritt aus der Gruft stellt sich heraus, dass die Wühlschrate während des Kampfes den Mechanismus der Brücke zerbissen haben. Sie bleibt dauerhaft abgesenkt.
-\spaltenende
-\vfill
+
+%\spaltenende
+%\vfill
+
 \probenkasten[bild=athletik,farbe=rot, gruppenprobe=nein, zusammenarbeit=nein, pw=24,
 erfolg={Nach dem ersten Erfolg kann ein Seil herübergeworfen werden. Weitere Proben entfallen.},
 misserfolg={Ein Fehlschlag führt bäuchlings auf die harte Oberfläche: W6+4~SP.},
 ]
 {Akrobatik}{Der Sprung auf den Grat ist leicht. Schwer ist, punktgenau auf der schmalen und glatten Oberfläche zu landen. }
-\vfill
-\spaltenanfang
+
+%\vfill
+%\spaltenanfang
+\columnbreak
 
 \subsection{Weitere Ebenen}
 Auf der Suche nach Abstiegen nehmen die Wühlschrat-Schäden zu. Auch muss hier und da an einer Schutthalde ein Durchschlupf gegraben werden.
@@ -915,6 +914,12 @@ Auf der Suche nach Abstiegen nehmen die Wühlschrat-Schäden zu. Auch muss hier 
 Mit etwas Mühe finden sich aber Wege in die Tiefe, etwa zum großen Wasserspeicher, den \textbf{Felswandler} (\emph{KK:113}) bewachen, oder einem zugewachsenen Hinterausgang, wo vor Jahrhunderten Abraum entsorgt wurde.
 
 Weitere Geheimnisse mögen sich hier verbergen, doch sind sie nicht Teil dieses Abenteuers.
+
+\vspace{0.5cm}
+\begin{center}
+\includegraphics[width=0.8\linewidth]{Lindwurmschlägl}
+\end{center}
+
 
 \spaltenende
 
