--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -152,7 +152,7 @@
 	Matthias Thanos\\
 	% Norman Obst\\
 	% René Dudziak\\
-	\href{https://www.instagram.com/rvb.illustration/}{Ramona von Brasch}\\
+	\href{https://de.wiki-aventurica.de/wiki/Ramona_von_Brasch}{Ramona von Brasch}\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\
 	\href{https://www.flickr.com/photos/britishlibrary/albums/with/72157640537276514}{British Library}\\
 	\href{https://www.nga.gov/}{National Gallary of Art}
