uncommented mprobe and texticon

--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -57,8 +57,8 @@
 \newcommand{\vorlesen}[1]{\begin{whitebox}#1\end{whitebox}}
 
 % TODO: hab ich nur ergaenzt weil die commands fehlten, wo sollten die stehen?
-\newcommand{\mprobe}[4]{\probe{#1}{#2}{#3}{#4}}
-\newcommand{\texticon}[1]{\icon{#1.png}}
+%\newcommand{\mprobe}[4]{\probe{#1}{#2}{#3}{#4}}
+%\newcommand{\texticon}[1]{\icon{#1.png}}
 
 % NOTE Font liegt jetzt mit im Repository. Funktionert bei mir unter Windows und Linux.
 %\newfontfamily{\rog}{Rogolan.ttf}
