added documentation for attempt to auto check links. Added link to abenteuer ilaris online in main.tex

--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -122,7 +122,7 @@
 {\Large
 \vspace*{0.5cm}
 \begin{center}
-\textbf{Version 0.95 vom \today}
+\textbf{Version 1.0 vom \today}
 \end{center}
 \vspace*{0.25cm}
 \begin{center}
@@ -268,7 +268,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über jede Rückmeldun
 \input{klamm_und_heimlich/klamm-und-heimlich.tex}
 
 
-\chapter*{\href{}{Die schwarze\linebreak Hand im Wengen\-holmer Land}} % TODO
+\chapter*{\href{https://ilaris-online.de/app/abenteuer/7e77091f-0602-494e-8c89-0ae840704ced}{Die schwarze\linebreak Hand im Wengen\-holmer Land}} % TODO
 \addcontentsline{toc}{chapter}{Die\,schwarze\,Hand\,\allowbreak im\,\allowbreak Wengen\-holmer\allowbreak\,Land}
 \thispagestyle{empty}
 
@@ -325,13 +325,14 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über jede Rückmeldun
 \thispagestyle{empty}
 
 \begin{center}
-\zeichnung[0.69\textwidth]{cover-bergkoenig.png}\\
+\zeichnung[0.67\textwidth]{cover-bergkoenig.png}\\
 \usekomafont{section}Matthias Ott\normalfont\normalcolor\normalsize
 \end{center}
 
 \credit{Illustrationen}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\
     Alnus (Anton Dobsak)\\
-	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\	
+	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\
+	\href{https://de.wiki-aventurica.de/wiki/Ramona_von_Brasch}{Ramona von Brasch}\\
 	game-icons.net
 }
 \credit{Mit Dank an}{Kilian Linder für konstruktives Feedback,\\ Xaver Stiensmeier für die Ausrichtung des Wettbewerbs und Odir Sensendengler\\ sowie die geduldige Testgruppe: Jascha, Gloria, Meike und Hannes
